--- a/portfolio.html
+++ b/portfolio.html
@@ -108,6 +108,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="./images/portfolio/basketball-poster.jpg"
                     alt="дизайн постера игры New Orlean vs Golden Star"
@@ -127,6 +132,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="./images/portfolio/seafood-restaurant.jpg"
                     alt="приложение для ресторана Seafood"
@@ -144,6 +154,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="images/portfolio/prime-project.jpg"
                     alt="маркетинг проект Prime"
@@ -161,6 +176,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="./images/portfolio/box-project.jpg"
                     alt="приложение для проекта Boxes"
@@ -178,6 +198,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="./images/portfolio/inspiration-website.jpg"
                     alt="фото веб-сайта Inspiration has no Borders"
@@ -195,6 +220,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="./images/portfolio/magazine-design.jpg"
                     alt="дизайн журнала Limited Edition"
@@ -214,6 +244,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="./images/portfolio/lab-project.jpg"
                     alt="маркетинг проект LAB"
@@ -231,6 +266,11 @@
             <li class="item">
               <a href="" class="projects-list-link link">
                 <div class="project-list-thumb">
+                  <p class="thumb-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                   <img
                     src="./images/portfolio/business-app.jpg"
                     alt="приложение Growing Business"
@@ -313,7 +353,6 @@
           <p class="call-to-action">Подпишитесь на рассылку</p>
 
           <form name="subscribe" action="" class="subscribe-form">
-            <label for=""></label>
             <input
               type="email"
               name="email"
